<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.muhi.calculator.MainActivity">

    <EditText
        android:id="@+id/input1_id"
        android:layout_width="230dp"
        android:layout_height="43dp"

        android:layout_marginTop="35dp"
        android:ems="10"
        android:hint="@string/eingabe"
        android:inputType="numberSigned|numberDecimal"
        android:maxLines="1"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/result_id"
        android:layout_width="204dp"
        android:layout_height="31dp"
        android:layout_gravity="start"
        android:layout_marginEnd="141dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="141dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="111dp"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input2_id"
        tools:ignore="MissingConstraints,RtlHardcoded" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="83dp"
        android:layout_height="22dp"
        android:layout_gravity="start"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="233dp"
        android:text="@string/outLabel"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="19sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/text1_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="46dp"
        android:text="@string/dividendLabel"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintRight_toLeftOf="@+id/input1_id"
        android:layout_marginRight="8dp" />

    <TextView
        android:id="@+id/text2_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="39dp"
        android:text="@string/divisorLabel"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/input2_id"
        app:layout_constraintTop_toBottomOf="@+id/text1_in"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/button_id"
        android:layout_width="88dp"
        android:layout_height="57dp"
        android:text="@string/buttonname"
        android:textStyle="bold"
        android:layout_marginEnd="13dp"
        android:layout_marginRight="13dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/input2_id"
        app:layout_constraintVertical_bias="0.037" />

    <EditText
        android:id="@+id/input2_id"
        style="@android:style/Widget.AutoCompleteTextView"
        android:layout_width="230dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/eingabe"
        android:inputType="numberSigned|numberDecimal"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input1_id"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/textView2_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="97dp"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/ok_id"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginBottom="35dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/ok"
        android:textAlignment="center"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/clear_id"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:text="@string/clear"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints,RtlHardcoded"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/text2_in"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.381" />

</android.support.constraint.ConstraintLayout>
