<resources>

    <string name="app_name">Calculator</string>
    <string name ="dividendLabel">Dividend:</string>
    <string name = "divisorLabel">Divisor:</string>
    <string name = "outLabel">OUTPUT:</string>
    <string name="buttonname">Divide</string>
    <string name="eingabe">Zahl eingeben</string>
    <string name="ok">OK</string>
    <string name="clear">CLEAR</string>
    <string name="nothing">Bitte Werte eingeben.</string>
    <string name="error">ERROR</string>
    <string name="divisorerror">Bitte Divisor eingeben.</string>
    <string name="dividenderror">Bitte Dividend eingeben.</string>
    <string name="incorrectInput">Falsche Eingabe !!!</string>

</resources>
